--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,22 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #FFF;
+  --foreground: #ededed;
+  --text-color: #0B4A3B;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #FFD15C;
     --foreground: #ededed;
+    --text-color: #0B4A3B;
+
   }
 }
 
 body {
-  color: var(--foreground);
+  color: var(--text-color);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
